clang/test/BSC/Negative/Generic/StructAndFunction/invalid_method_definition/generic_parameter_kw_id.cbs
// RUN: %clang_cc1 -verify %s

// need improvements on error message
void test<const T>() { }
// expected-error@-1 2 {{unknown type name 'T'}}
// expected-error@-2 {{expected identifier}}
